Fix scrollbar

--- a/scss/colors.module.scss
+++ b/scss/colors.module.scss
@@ -2,27 +2,12 @@ $base: #EFEFEF;
 $text: #363636;
 
 $pastel-1: #ABDEE6;
-$pastel-2: #CBAACB;
-$pastel-3: #FFFFB5;
-$pastel-4: #FFCCB6;
-$pastel-5: #FFAEA5;
+$pastel-2: #91F3D2;
+$pastel-3: #A4F9B5;
+$pastel-4: #C9FB92;
+$pastel-5: #F9F871;
 $pastel-6: #FFC8A2;
-$pastel-7: #CCE2CB;
-$pastel-8: #97C1A9;
-$pastel-9: #FFDBCC;
+$pastel-7: #E6A4A0;
+$pastel-8: #E8B6EA;
+$pastel-9: #BD889D;
 $pastel-10: #A2E1DB;
-
-:export {
-  base: $base;
-  text: $text;
-  pastel-1: $pastel-1;
-  pastel-2: $pastel-2;
-  pastel-3: $pastel-3;
-  pastel-4: $pastel-4;
-  pastel-5: $pastel-5;
-  pastel-6: $pastel-6;
-  pastel-7: $pastel-7;
-  pastel-8: $pastel-8;
-  pastel-9: $pastel-9;
-  pastel-10: $pastel-10;
-}
