--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -39,11 +39,15 @@ body {
 
     .scrollbar {
       width: 8px;
-      height: 256px;
+      height: 100%;
       border-radius: 4px;
       background-color: change-color( colors.$text, $alpha: 0.5 );
-      transition: height .3s ease-out;
+      transition: height .1s, background-color .3s;
       cursor: pointer;
+
+      &.hidden {
+        background-color: transparent;
+      }
 
       &:hover {
         background-color: colors.$text;
